--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,19 @@
 {
-  "parser": "babel-eslint",
-  "extends": "airbnb/base",
-  "plugins": [
-    "vue"
+  "extends":[
+    "@nuxtjs",
+    "airbnb/base"
   ],
   "rules": {
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
+    "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
     "no-param-reassign": [2, { "props": false }],
     "no-console": [2, { "allow": ["warn", "error"] }]
   },
+  "plugins": [
+    "vue"
+  ],
   "globals": {
     "expect": true,
     "before": true,
